# saarthi

./: .dockerignore  .env.example  .gitignore  2026-04-24-195239-this-session-is-being-continued-from-a-previous-c.txt  AZURE-CONFIG-EXAMPLES.md  AZURE-SETUP-GUIDE.md  CLAUDE.md  DEMO-GUIDE.md  DESIGN_MOCKUP.md  Dockerfile  FINAL-REPORT.md  FIXES-APPLIED.md  HANDOFF.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION-DONE.md  INTEGRATION-QUICKSTART.md  INTEGRATIONS-COMPLETE.md  LICENSES.md  MISSING-INTEGRATIONS-AUDIT.md  Makefile  PRESENTATION-GUIDE.md  PROJECT-STATUS.md  QUICK-START-IMPROVEMENTS.md  README.md  SESSION-COMPLETE.md  SETUP-GUIDE.md  TEST-RESULTS.md  UI-UX-UPGRADE.md  UPGRADE-SUMMARY.md  build_kb_index.py  pnpm-lock.yaml  pyproject.toml  test_tier1_modules.py  test_tier1_modules_clean.py  vercel.json  verify_all_products.py
.github/workflows/: ci.yml  deploy-preview.yml  lint.yml  release.yml  test.yml
apps/api/: NUDGE_README.md  alembic.ini  db.py  frames.py  intelligence.py  kb_routes.py  main.py  main_minimal.py  metrics.py  notifications.py  nudge_generator.py  pipeline.py  pyproject.toml  seed_data.py  seed_nudges.py  sentiment_analyzer.py  websocket_call.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_create_nudge_tables.py  f10792c455de_create_calls_table.py
apps/api/frame_processors/: asr_processor.py  langgraph_processor.py  smart_vad.py  tts_processor.py  vad_processor.py
apps/api/models/: __init__.py  call.py  nudge.py
apps/api/routes/: analytics.py  engagement.py  nudges.py
apps/api/tests/: test_all_products_pipeline.py  test_analytics_routes.py  test_azure_provider.py  test_call_model.py  test_health.py  test_langgraph_processor.py  test_metrics.py  test_pipeline_tts_provider_selection.py  test_pipeline_wiring.py  test_vad_processor.py  test_websocket_call.py
apps/supervisor/: README.md  __init__.py  azure_speech.py  chirp_speech.py  main.py  test_feed.py  websocket.py  worker.py
apps/web/: biome.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: page.tsx  (+3 more)
chatbot_kb/: 00_common_life_insurance_golden_responses.md  00_product_benefits_matrix_clean.csv  00_product_benefits_matrix_preserved.md  00_product_routing_kb.md  01_absli_nishchit_aayush_plan_kb.md  02_absli_super_term_plan_kb.md  03_absli_salaried_term_plan_kb.md  04_absli_fortune_wealth_plan_kb.md  05_absli_platinum_gain_plan_kb.md  06_absli_vision_retirement_solution_kb.md  ABSLI_Sherpa_Trainer_Combined_KB.md  README.md  absli_kb_manifest.json
consent/: VOICE_CONSENT_TEMPLATE.md
docs/: Claude-Code-Starter-Prompt.md  DEPLOYMENT.md  MAKING-IT-WORLD-CLASS.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PRODUCT-SCRIPTS-GUIDE.md  PRODUCTS-QUICK-REFERENCE.md  SAARTHI-Project-Plan.md  TIER1-IMPROVEMENTS-INTEGRATION.md
docs/adr/: 0001-cloud-first-inference.md  0002-phase1-voice-loop.md
evals/: RLAIF-RESULTS.md
evals/redteam/: adversarial_suite.yaml  test_adversarial.py
fixtures/: fake_identifiers.py
infra/: docker-compose.yml
kb_indices/: faiss.index  metadata.pkl
report/: FINAL-REPORT.md
tests/: test_comprehensive_tier1.py
(+549 files in other folders)
