[project]
name = "saarthi-api"
version = "0.1.0"
description = "SAARTHI FastAPI orchestrator + Pipecat-ai + LangGraph pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pipecat-ai[groq,elevenlabs]>=0.0.40",
    "langgraph>=0.2",
    "langsmith>=0.1",
    "sqlmodel>=0.0.19",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "webrtcvad>=2.0.10",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "saarthi-llm-client",
    "saarthi-voice",
    "saarthi-guardrail",
    "saarthi-eligibility",
    "saarthi-rag",
    "saarthi-scripts",
    "saarthi-dialog",
    "asyncpg>=0.31.0",
    "setuptools<81",
    "neo4j>=5.20",
    "qdrant-client>=1.9",
    "pypdf>=4.0",
    "twilio>=9.0",
    "azure-cognitiveservices-speech>=1.49.1",
    "indic-transliteration>=2.3.82",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["apps/api"]

[tool.uv.sources]
saarthi-llm-client = { workspace = true }
saarthi-voice = { workspace = true }
saarthi-guardrail = { workspace = true }
saarthi-eligibility = { workspace = true }
saarthi-rag = { workspace = true }
saarthi-scripts = { workspace = true }
saarthi-dialog = { workspace = true }
